--- a/css/style.css
+++ b/css/style.css
@@ -249,3 +249,34 @@ h1,h2,h3,h4,h5,h6 {
 .team-member:hover img {
    transform: translateY(-6rem);
 }
+
+ /* Testimonials Section */
+#testimonials img {
+   width: 6.5rem;
+   height: 6.5rem;
+   border-radius: 100%;
+   transition: all 0.4s ease;
+}
+
+#testimonials .nav-pills .nav-link.active {
+   background-color: transparent;
+}
+
+#testimonials .nav-pills .nav-link.active img {
+   transform: scale(1.3);
+}
+
+ .review .stars {
+    color: #E93B81;
+ }
+
+ .review p {
+    max-width: 72rem;
+    margin: 2.4rem auto;
+    font-style: italic;
+ }
+
+ /* Clients Section */
+ #clients {
+    height: 3.5rem;
+ }
